Remove last uses of guava